--- a/products.html
+++ b/products.html
@@ -35,7 +35,7 @@
 
       <!-- Brand -->
       <a class="navbar-brand" href="index.html" tabindex="-1">
-      	<i class="fas fa-dice-d20 fa-spin fa-1x"></i> Board Game Store
+      	<i class="fas fa-dice-d20 fa-spin fa-1x" aria-hidden="true"></i> Board Game Store
       </a>
       <!-- Brand -->
 
@@ -59,9 +59,9 @@
           </li>
         </ul>
         <ul class="nav navbar-nav flex-row justify-content-center flex-nowrap">
-          <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/" tabindex="1"><i class="fa fa-facebook mr-2"></i><span class="sr-only">Facebook</span></a></li>
-          <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/" tabindex="1"><i class="fa fa-instagram mr-2"></i><span class="sr-only">Instagram</span></a></li>
-          <li class="nav-item"><a class="nav-link" href="https://www.twitter.com/" tabindex="1"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/" tabindex="1"><i class="fa fa-facebook mr-2" aria-hidden="true" title="Facebook"></i><span class="sr-only">Facebook</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/" tabindex="1"><i class="fa fa-instagram mr-2" aria-hidden="true" title="Instagram"></i><span class="sr-only">Instagram</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="https://www.twitter.com/" tabindex="1"><i class="fa fa-twitter" aria-hidden="true" title="Twitter"></i><span class="sr-only">Twitter</span></a></li>
       </ul>
       </div>
       <!-- Navigation Links + Social Links -->
@@ -115,14 +115,14 @@
                   <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <div class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </div>
                     <div>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i><span class="sr-only">Price: </span>30.00 $
                     </div>
                     <div>
                       <ul class="small">
@@ -140,14 +140,14 @@
                   <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <div class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </div>
                     <div>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i><span class="sr-only">Price: </span>30.00 $
                     </div>
                     <div>
                       <ul class="small">
@@ -165,14 +165,14 @@
                   <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <div class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </div>
                     <div>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i><span class="sr-only">Price: </span>30.00 $
                     </div>
                     <div>
                       <ul class="small">
@@ -190,14 +190,14 @@
                   <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <div class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </div>
                     <div>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i><span class="sr-only">Price: </span>30.00 $
                     </div>
                     <div>
                       <ul class="small">
@@ -216,14 +216,14 @@
                     <div class="caption text-center">
                       <h2 class="h5">La Cosa Nostra</h2>
                       <div class="text-warning">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                        <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                        <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                        <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                        <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                       </div>
                       <div>
-                        <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                        <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i><span class="sr-only">Price: </span>30.00 $
                       </div>
                       <div>
                         <ul class="small">
@@ -242,14 +242,14 @@
                 <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <div class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </div>
                     <div>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i><span class="sr-only">Price: </span>30.00 $
                     </div>
                     <div>
                       <ul class="small">
@@ -268,14 +268,14 @@
                 <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <div class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </div>
                     <div>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i><span class="sr-only">Price: </span>30.00 $
                     </div>
                     <div>
                       <ul class="small">
@@ -295,14 +295,14 @@
                 <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <div class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </div>
                     <div>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i><span class="sr-only">Price: </span>30.00 $
                     </div>
                     <div>
                       <ul class="small">
@@ -321,14 +321,14 @@
                     <div class="caption text-center">
                       <h2 class="h5">La Cosa Nostra</h2>
                       <div class="text-warning">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                        <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                        <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                        <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                        <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                       </div>
                       <div>
-                        <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                        <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i><span class="sr-only">Price: </span>30.00 $
                       </div>
                       <div>
                         <ul class="small">
@@ -347,14 +347,14 @@
                 <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <div class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </div>
                     <div>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i><span class="sr-only">Price: </span>30.00 $
                     </div>
                     <div>
                       <ul class="small">
@@ -372,14 +372,14 @@
                 <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <div class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </div>
                     <div>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i><span class="sr-only">Price: </span>30.00 $
                     </div>
                     <div>
                       <ul class="small">
@@ -397,14 +397,14 @@
                 <div class="caption text-center">
                     <h2 class="h5">La Cosa Nostra</h2>
                     <div class="text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
+                      <i class="fas fa-star" aria-hidden="true" title="RatingStar"></i><span class="sr-only">*</span>
                     </div>
                     <div>
-                      <i class="far fa-money-bill-alt mr-2"></i> 30.00 $
+                      <i class="far fa-money-bill-alt mr-2" aria-hidden="true" title="Price"></i><span class="sr-only">Price: </span>30.00 $
                     </div>
                     <div>
                       <ul class="small">
@@ -434,17 +434,17 @@
         <ul class="list-unstyled list-inline text-center">
           <li class="list-inline-item">
             <a class="btn-floating btn-facebook mx-1" href="https://www.facebook.com/" tabindex="3">
-              <i class="fab fa-facebook-f"></i><span class="sr-only">Facebook</span>
+              <i class="fab fa-facebook-f" aria-hidden="true" title="Facebook"></i><span class="sr-only">Facebook</span>
             </a>
           </li>
           <li class="list-inline-item">
             <a class="btn-floating btn-instagram mx-1" href="https://www.instagram.com/" tabindex="3">
-              <i class="fab fa-instagram"></i><span class="sr-only">Instagram</span>
+              <i class="fab fa-instagram" aria-hidden="true" title="Instagram"></i><span class="sr-only">Instagram</span>
             </a>
           </li>
           <li class="list-inline-item">
             <a class="btn-floating btn-twitter mx-1" href="https://www.twitter.com/" tabindex="3">
-              <i class="fab fa-twitter"></i><span class="sr-only">Twitter</span>
+              <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i><span class="sr-only">Twitter</span>
             </a>
           </li>
         </ul>
